# Tarea1

combinacion/: CMakeLists.txt  combinacion.cpp
tiempo/: CMakeLists.txt  tiempoTrans.cpp
