################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

project( comb )

add_executable(Combinacion combinacion.cpp)
